2004-12-27  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* bin/devdiscover.in (absXmlFilename): output file is placed in
	siteXmlDir if the path is not absolute. $XMLCONFIG is still
	supported for the sake of compatibility.

2004-12-03  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* configure.ac: replaced --disable-modcheck with --enable-pkgonly
	
2004-11-22  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* NEWS: Release 0.1.8
	* Started Torrus development

2004-11-02  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* lib/Torrus/ConfigTree/Validator.pm:
	New parameters:  'monitor-period', 'monitor-timeoffset'

	* lib/Torrus/Monitor.pm: Now monitor runs under standard Scheduler

2004-10-25  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* lib/Torrus/Collector.pm:
	Moved collector specific code from bin/collector.in.

2004-10-24  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* bin/acledit.in: New privilege added: DisplayAdmInfo

	* lib/Torrus/Renderer/AdmInfo.pm, templates/adminfo.html:
	First step to display administratove information.

2004-10-13  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* bin/collector.in, bin/monitor.in:
	Process name reflecting the commandline and status

2004-10-04  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* lib/Torrus/Renderer/RRDtool.pm (rrd_make_multigraph):
	New multigraph parameter: disable-gprint-X

2004-09-30  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* xmlconfig/generic/collector-periods.xml:
	Changed rrd-create-rra

2004-09-29  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* lib/Torrus/DevDiscover/NetScreen.pm:
	Changed the interface mapping from ifDescr to MAC address

2004-09-22  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* examples/rrdup_notify.sh: collector failure notification script

2004-09-20  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
